<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_logos"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitCenter"
            tools:src="@color/BDC6" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/img_item_logos"
            android:layout_toRightOf="@+id/img_item_logos"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/BDC6"
            tools:text="@string/logos_name"/>

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_button"
            android:layout_below="@id/tv_item_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/img_item_logos"
            android:layout_toRightOf="@id/img_item_logos"
            android:ellipsize="end"
            android:textSize="8dp"
            android:maxLines="5"
            tools:text="@string/logos_detail" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/img_item_logos"
            android:layout_toRightOf="@id/img_item_logos"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btn_set_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="8sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>